src/compiler/tests/invalid/invalid_program2/invalid_program2.klt
// FALTA DECLARAR FRASE

fun potencia (base: Int; exp: Int) : Boolean { // RETURN DE TIPO ERRONEO
  var resultado: Int = 1;

    //ERROR DE TIPO EN CONDICIONAL
  while (3 + true) {
    resultado = resultado * base;
    exp = exp -1;
  }

  return resultado;
}

// FALTA FUNCION MAIN
fun noMain () : None {

    var acabar: Boolean = false;
    var base: String = 10;      //ERROR TIPO
    var exp: Int = 4;
    var factorialRes: Int;

    while (!acabar) {

       factorialRes = potencia(base, exp);
       print(frase, factorialRes);  //Nº de argumentos erróneo
       base = base -1;

       if (exp <= 0) {
           acabar = 5; //Tipo incompatible
       }
    }

    print("Fin del programa");
}